# LLM_Agent_2

./: .gitignore  Dockerfile  README.md  TODO.md  agent.py  communication.py  config.py  db.py  db.sqlite  doc_upload.py  docker-compose.yaml  docker-proxy-config.json  entrypoint.sh  function_node.py  function_sets.py  llm.py  main.py  memory.py  persona_gen.py  prompts.py  pyproject.toml
function_sets/: function_set_template.py
function_sets/base/: archival_storage.py  chat_log.py  chat_memory.py  general.py  recall_storage.py  working_context.py
function_sets/optional/: interpreter.py  web_search.py
haproxy/: haproxy.cfg.template
templates/: chat.html  create.html  index.html
