[project]
name = "llm-agent-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "mypy>=1.17.1",
    "openai>=1.99.9",
    "pocketflow>=0.0.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]
