[project]
name = "llm-agent-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "llm-sandbox[docker]>=0.3.18",
    "mypy>=1.17.1",
    "openai>=1.99.9",
    "pocketflow>=0.0.3",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "semantic-text-splitter>=0.27.0",
    "sqlalchemy>=2.0.43",
    "transformers>=4.55.3",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250822",
    "types-transformers>=0.1.0",
    "websockets>=15.0.1",
]
